# nmlcc

./: .gitmodules  CONTRIBUTORS.md  Cargo.toml  LICENSE  NML2_SingleCompHHCell.nml  README.md  README.org  bootstrap.sh  example-1.xml  lems-example-1.lems  lems.patch  nml.patch  nml2-base.xml  schema.xml
.github/workflows/: main.yml
dat/: CMakeLists.txt  main.cxx  main.py  run.sh
doc/: nml.md  nml.org  slides.org
example/: izhikevich2007_network.nml  nm-smol-cal.channel.nml  nml-cacc.channel.nml  nml-conc-models.nml  nml-double-synapses.nml  nml-eden-golgi.nml  nml-exp2syn.xml  nml-hh-cell.nml  nml-minimal-channel.xml  nml-simple-gap-junction.nml  nml-simple-ion-channels.xml  nml-simple-ks.nml  nml-simple-synapse.nml  nml-stdp.nml  nml-synapse-types.nml
example/io/: BK.channel.nml  ExpTime.nml  cacc.channel.nml  cah.channel.nml  cal-minimal.channel.nml  cal.channel.nml  h.channel.nml  k.channel.nml  kca.channel.nml  kdr.channel.nml  leak.channel.nml  na_a.channel.nml  na_s.channel.nml
experiments/: run.sh
experiments/hand-cf/: main.py
experiments/hand-cf-sm/acc/: hhcell.acc
experiments/hand-cf-sm/cat/: kChan.mod  naChan.mod  sm.mod
experiments/hand-cf-sm/cat-jnml/: kChan.mod
experiments/hand-cf-sm/cat-nmlcc/: kChan.mod  naChan.mod
experiments/hand-cf/acc/: hhcell.acc
experiments/hand/cat/: kChan.mod  passiveChan.mod  sm.mod
experiments/hh/acc/: hhcell.acc
experiments/hh/cat/: passiveChan.mod
experiments/hh/cat-jnml/: passiveChan.mod
experiments/hh/cat-nmlcc/: passiveChan.mod
experiments/jnml/: main.py
experiments/jnml/acc/: hhcell.acc
experiments/jnml/cat/: naChan.mod
experiments/nmlcc/: morph.nml
experiments/nmlcc-cf-sm/: main.hhcell.py
experiments/nmlcc-cf-sm/acc/: hhcell.acc
experiments/nmlcc-cf-sm/cat/: all.mod  kChan.mod  naChan.mod  passiveChan.mod
experiments/nmlcc-cf-sm/mrf/: hhcell.nml
ext/: nml.patch
src/: acc.rs  bundle.rs  component_type.rs  error.rs  expr.rs  instance.rs  lems.rs  lib.rs  main.rs  network.rs  nmodl.rs  schema.rs  variable.rs  xml.rs
src/lems/: file.rs  lems.rs  mod.rs  raw.rs
src/neuroml/: mod.rs  raw.rs
test/: scoping.xml
tests/: test_acc.rs  test_bundle_sm_nonuniform.rs  test_hay11.rs  test_network.rs  test_nmodl.rs
tests/hay11/: L5PC.cell.nml  L5PC.cell.nml.bak  c
tutorial/: hh-cell.py  hodgekin-huxley.org  hodgkin-huxley.org
