[package]
name = "nml2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom            = { version = "^7.1.0" }
roxmltree      = { version = "^0.14.1" }

[[bin]]
name = "lems"
path = "src/main.rs"

[[bin]]
name = "schema"
path = "src/schema.rs"
