[package]
name = "nml2"
version = "0.2.0"
edition = "2021"
default-run = "nmlcc"

[dependencies]
nom                = { version = "^7.1.0" }
roxmltree          = { version = "^0.14.1" }
clap               = { version = "^3.0.0", features = ["derive"] }
tracing            = { version = "^0.1" }
tracing-subscriber = { version = "^0.2" }
anyhow             = { version = "^1.0.0", features = ["backtrace"] }
thiserror          = { version = "^1.0.0" }
pretty_assertions  = { version = "^1.3.0" }

[[bin]]
name = "nmlcc"
path = "src/main.rs"

[[bin]]
name = "schema"
path = "src/schema.rs"
