[package]
name = "nml2"
version = "0.3.1"
edition = "2021"
default-run = "nmlcc"
authors = ["T. Hater"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/thorstenhater/nmlcc"
description = "Convert nmlcc neuro science components into Arbor data formats"
keywords = ["neuro-science", "science", "simulation"]
categories = ["command-line-utilities"]

[dependencies]
nom                = { version = "^7.1.0" }
roxmltree          = { version = "^0.20.0" }
clap               = { version = "^4.5.0", features = ["derive"] }
tracing            = { version = "^0.1" }
tracing-subscriber = { version = "^0.2" }
anyhow             = { version = "^1.0.0", features = ["backtrace"] }
thiserror          = { version = "^1.0.0" }
serde_json         = { version = "^1.0" }
serde              = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions  = { version = "^1.3.0" }

[[bin]]
name = "nmlcc"
path = "src/main.rs"

[[bin]]
name = "schema"
path = "src/schema.rs"
